# OpenCV

./: CMakeLists.txt  Readme.md  main.cpp
MD_pictures/: test.md
